fix: alignment home title and preloader number text

--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -3,9 +3,25 @@
 
 	background: $color-spring-wood;
 	height: 100%;
-	// overflow: hidden;
-	// position: fixed;
 	z-index: z('preloader');
+}
+
+.preloader__quote {
+	@extend %description-36;
+
+	max-width: 67rem;
+	// opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	span span {
+		@extend %description-36;
+
+		display: inline-block;
+		transform-origin: center center 0.5em;
+	}
 }
 
 .preloader__title__first__name {
@@ -46,8 +62,7 @@
 	transform: translateX(-50%);
 
 	@include media('<phone') {
-		bottom: auto;
-		top: 50%;
+		bottom: 10%;
 		transform: translate(-50%, -50%);
 	}
 }
